fix: align caller image to center

--- a/Missed Call Modal/style.css
+++ b/Missed Call Modal/style.css
@@ -35,6 +35,11 @@ a {
     padding: 20px 25px 70px;
 }
 
+.img-container {
+    display: grid;
+    align-items: center;
+}
+
 .top-icons_cont {
     display: grid;
     grid-template-columns: auto 1fr;
